[tool]
[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "$version"
version_files = ["setup.py"]

[tool.pdm]

[project]
name = "RlGlue-andnp"
version = "1.0.0"
description = "A tiny re-implementation of the rl-glue interface"
authors = [
    {name = "Andy Patterson", email = "andnpatterson@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/andnp/RlGlue.git"

[project.optional-dependencies]
dev = [
    "build",
    "commitizen",
    "flake8",
    "mypy",
    "numpy>=1.19.5",
    "pipenv-setup[black]",
    "pre-commit",
    "twine",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
