[tool]
[tool.commitizen]
name = "cz_conventional_commits"
version = "1.1.0"
tag_format = "$version"
version_files = ["pyproject.toml"]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "mypy",
    "flake8",
    "commitizen",
    "pre-commit",
    "twine",
    "numpy>=1.24.2",
]

[project]
name = "RlGlue-andnp"
version = "1.1.0"
description = "A tiny re-implementation of the rl-glue interface"
authors = [
    {name = "Andy Patterson", email = "andnpatterson@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/andnp/RlGlue.git"

[build-system]
requires = ["pdm-pep517>=1.1.0"]
build-backend = "pdm.pep517.api"
