[tool]
[tool.commitizen]
name = "cz_conventional_commits"
version = "2.0.0"
tag_format = "$version"
version_files = ["pyproject.toml"]

[tool.ruff.lint]
select = ['F', 'E', 'W', 'B', 'NPY201']
exclude = ['tests/*.py']
ignore = ['E501', 'E701']

[tool.pyright]
include = ['rlglue']
venvPath = '.'
venv = '.venv'
typeCheckingMode = 'standard'
useLibraryCodeForTypes = true

[tool.hatch.build.targets.wheel]
packages = ["rlglue"]


[project]
name = "RlGlue-andnp"
version = "2.0.0"
description = "A tiny re-implementation of the rl-glue interface"
authors = [
    {name = "Andy Patterson", email = "andnpatterson@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/andnp/RlGlue.git"

[dependency-groups]
dev = [
    "commitizen>=4.2.1",
    "pip>=25.0.1",
    "pre-commit>=4.1.0",
    "pyright>=1.1.393",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
    "numpy>=1.24.2",
    "twine",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
